fixes to full-screen-modal
hide site nav
stop horizontal scrolling
fix widths and side gutters on mobile

--- a/src/css/seeds/edit.less
+++ b/src/css/seeds/edit.less
@@ -1,15 +1,6 @@
 .community-newSeed, .community-editSeed {
   .full-screen-modal;
 
-  .main-col {
-  	.make-sm-column(8);
-  	.make-sm-column-offset(2);
-  	@media (max-width: @screen-xs-max) {
-  		padding-right: @std-padding*2;
-  		padding-left: @std-padding*2;
-  	}
-  }
-
 	.select-type {
 		.make-row;
 		border-bottom: 2px solid @default-border;
